...
                                    ),
                                  );
                                },
                              ),
                              const SizedBox(height: 16),
                              RichText(
                                key: const Key('CreateAccountLink'),
                                text: TextSpan(
                                  text: AppLocalizations.of(context)!
                                      .createAccount, // <-- localized
                                  style: FontHelper.getStyle(
                                    textColor: Colors.white,
                                    fontSize: responsiveFontSize(context, 16),
...
